[workspace]
members  = ["demo"]
resolver = "2"

[workspace.package]
documentation = "https://docs.rs/egui-treeize"
edition       = "2024"
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/alexzhang1030/egui-treeize"
rust-version  = "1.91.1"

[workspace.dependencies]
eframe      = { version = "0.33" }
egui        = { version = "0.33" }
egui_extras = { version = "0.33" }
serde       = { version = "1" }

egui-probe           = { version = "0.10.0" }
egui-scale           = { version = "0.3.0" }
wasm-bindgen-futures = "0.4"
web-sys              = "0.3.81"

[package]
categories              = ["gui", "visualization"]
description             = "Tree-like graph visualization for egui"
documentation.workspace = true
edition.workspace       = true
keywords                = ["egui", "tree", "graph", "ui", "tree-graph"]
license.workspace       = true
name                    = "egui-treeize"
readme                  = "README.md"
repository.workspace    = true
rust-version.workspace  = true
version                 = "0.1.1"

[features]
serde = ["dep:serde", "egui/serde", "slab/serde"]

[dependencies]
egui.workspace = true
serde          = { workspace = true, features = ["derive"], optional = true }
slab           = { version = "0.4" }
smallvec       = { version = "1.15", features = ["const_new"] }

egui-probe           = { workspace = true, features = ["derive"], optional = true }
egui-scale.workspace = true

[dev-dependencies]
eframe      = { workspace = true, features = ["serde", "persistence"] }
egui_extras = { workspace = true, features = ["all_loaders"] }
rusty-hook  = "^0.11.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures.workspace = true

[[example]]
name              = "demo"
required-features = ["serde", "egui-probe"]

[package.metadata.cargo-shear]
ignored = ["rusty-hook"]
