[package]
edition.workspace = true
name              = "demo"
publish           = false
version           = "0.1.0"

[[bin]]
name = "demo"
path = "../examples/demo.rs"

[dependencies]
eframe               = { workspace = true, features = ["serde", "persistence"] }
egui.workspace       = true
egui-probe           = { workspace = true, features = ["derive"] }
egui_extras          = { workspace = true, features = ["all_loaders"] }
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn                  = { workspace = true, features = ["extra-traits"] }

egui-treeize = { path = "..", features = ["egui-probe", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace              = true
